Fixed style so buy button text doesn't wrap

--- a/frontend/src/sass/app.scss
+++ b/frontend/src/sass/app.scss
@@ -82,7 +82,6 @@ header {
   }
   button {
     width: 100%;
-    font-size: 1.2em;
     font-weight: bold;
   }
 }
@@ -96,7 +95,7 @@ main {
 main.home {
   div.items {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1em;
     .item {
       img {
